# telegram_scrum_master

./: .env.example  .gitignore  README.md  docker-compose.monitoring.yml  docker-compose.telegram-gateway.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-telegram-gateway.yml  deploy-test.yml
apps/web-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web-ui/src/: App.tsx  main.tsx
apps/web-ui/src/components/: AgentConfigPanel.test.tsx  AgentConfigPanel.tsx  AgentToolsPanel.tsx  AuditReport.tsx  Badge.tsx  Markdown.tsx  TraceTimeline.tsx  shturm.tsx
apps/web-ui/src/lib/: agentLogos.ts  api.ts  format.ts
apps/web-ui/src/pages/: AdminPage.tsx  BoardPage.tsx  DevPage.tsx  EvalNewPage.tsx  (+11 more)
config/nginx/: telegram-gateway.conf
config/telegram-gateway/: .env.example
docs/: ACCEPTANCE_CHECKLIST.md  ADDING_AGENTS.md  AGENT_FIX_PLAN_QUERY_VOICE.md  AGENT_IMPROVEMENT_PLAN.md  AGENT_WOW_PLAN.md  ARCHITECTURE.md  CONFIGURATION.md  CORE_LIBRARY.md  DATA_MODEL.md  DEADLINE_REMINDERS_PLAN.md  DEPLOYMENT.md  GOAL_IMPLEMENTATION_PLAN.md  MONITORING.md  README.md  SCRUMIC_DESIGN.md  SERVICES.md  TARGET_ARCHITECTURE.md  TELEGRAM_LATENCY.md  TELEGRAM_SETUP_GUIDE.md  TRACKER_MCP_SETUP.md  TRACK_A_PROGRESS.md  TRACK_A_TELEGRAM_PLAN.md  TRACK_B_TASKS.md  UI_UPGRADE_PLAN.md  agent_evaluation.md  agents.md  dev_plan.md  meeting_capture.md  pm_agent_stage_graph.md  roadmap_mvp.md  tracker_queue_DARKHORSE.md
docs/TrackB/: implementation_plan.md
docs/agents/: README.md  generate_logos.py
docs/diagrams/: generate_svgs.py
docs/runbooks/: telegram-gateway-runbook.md
docs/scrumiks/: cosmetics.js  preview.html  render_cosmetics.py  render_dressed.py  render_sheet.py  sprites.js
monitoring/: alertmanager.yml  alerts.yml  loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: 01_host.json  02_containers.json  03_app.json  04_telegram.json  05_agent_debug.json
scripts/: setup-tunnel-nginx.sh  telegram_latency_ab.sh  vps-setup.sh
services/console-api/: Dockerfile  pyproject.toml
services/console-api/src/console_api/: __init__.py  eval_routes.py  main.py  security.py
services/console-api/tests/: test_autonomy.py  test_bootstrap.py  test_routes.py  test_security.py
services/eval-runner/: Dockerfile  pyproject.toml
services/eval-runner/src/eval_runner/: __init__.py  daemon.py  main.py
services/eval-runner/tests/: test_daemon.py
services/meeting-capture/: Dockerfile  README.md  pyproject.toml
services/meeting-capture/src/meeting_capture/: __init__.py  bot.py  config.py  dispatcher.py  main.py  recorder.py  repository.py  schemas.py  storage.py  telegram_outbox.py  transcription.py  url.py
services/meeting-capture/tests/: conftest.py  test_bot.py  test_capture_config.py  test_dispatcher.py  test_fanout.py  test_storage.py  test_transcription.py  test_url.py
services/platform-api/: Dockerfile  pyproject.toml
services/platform-api/src/platform_api/: agent.py  main.py  rpc_client.py  telegram_auth.py  telegram_bridge.py  telegram_import.py  telegram_media.py
services/platform-api/tests/: test_api.py  test_business_message_routing.py  test_secretary_mode.py  test_telegram_auth.py  test_telegram_bridge_callbacks.py  test_telegram_bridge_routing.py  test_telegram_e2e_smoke.py  test_telegram_import.py
services/pm-orchestrator/: Dockerfile  pyproject.toml
services/pm-orchestrator/src/pm_orchestrator/: __main__.py  orchestrator.py  rpc.py
services/pm-orchestrator/src/pm_orchestrator/agents/: audit_agent.py  meeting_summarizer.py  pm_agent.py
services/pm-orchestrator/src/pm_orchestrator/tools/: call_agent.py  meeting_capture.py  schedule_task.py
services/pm-orchestrator/tests/: test_agent_dashboard.py  test_call_agent.py  test_meeting_summarizer.py  test_meeting_summarizer_prompt.py  test_orchestrator.py  test_pm_agent_prompt.py  test_schedule_task.py
services/telegram-gateway/: Dockerfile  pyproject.toml
services/telegram-gateway/src/telegram_gateway/: __init__.py  __main__.py  bot_api.py  bridge.py  formatting.py  main.py  runtime.py  settings.py  spool.py  streaming.py
services/telegram-gateway/tests/: test_bot_api.py  test_bridge.py  test_formatting.py  test_gateway.py  test_outbox_worker.py  test_settings.py  test_streaming.py
(+13 files in other folders)
