[project]
name = "pm-agent-platform"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
core = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
