[project]
name = "console-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/console_api"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
