[project]
name = "pm-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "core",
    "langgraph>=0.2",
    "langchain-community>=0.2",
    "pydantic-settings>=2.0",
    "litellm>=1.40",
]

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pm_orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
