[project]
name = "pm-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "core",
    "croniter>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pm_orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
